name:                maze

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:             PublicDomain
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
category:            Game
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable maze
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       Canvas
                     , Canvas.Types
                     , Cell
                     , Cell.Types
                     , Maze
                     , Stack
                     , Stack.Types

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <4.11
                     , containers
                     , ghcjs-base
                     , ghcjs-dom-jsffi
                     , lens
                     , random
                     , reflex
                     , reflex-dom
                     , reflex-dom-canvas
                     , text

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
